# api

./: .gitignore  Cargo.toml  README.md  Trunk.toml  config.yml  index.html
crates/: everything.sh
crates/api/: Cargo.toml
crates/api/src/: main.rs  util.rs
crates/api/src/env/: config.rs
crates/api/src/errors/: bcript.rs  defaults.rs  image.rs  io.rs  scrape.rs  surreal.rs
crates/api/src/routes/: frontend.rs
crates/api/src/routes/image/: mod.rs  save.rs
crates/api/src/routes/manga/: external.rs  home.rs  info.rs  mod.rs  reader.rs
crates/api/src/routes/user/: activate.rs
crates/api/src/services/: crypto_service.rs  uri_service.rs
crates/api/src/services/db/: auth_tokens.rs  chapter.rs  manga.rs  manga_kind.rs  manga_list.rs  mod.rs  scrape_list.rs  user.rs
crates/api/tools/: anime_planet_tag_scraper.js
crates/app/: index.html
crates/app/assets/: manifest.json  sw.js
crates/app/src/: app.rs  fonts.rs
crates/app/src/data/: user.rs
crates/app/src/pages/: mod.rs  reader.rs  search.rs
crates/app/src/pages/auth/: sign_in.rs  sign_up.rs  sign_up_info.rs
crates/app/src/widgets/: home_page_swithcer.rs  hover_brackground.rs  image_overlay.rs
crates/app/src/widgets/reader/load/: mod.rs  multi.rs  single.rs
crates/app/src/widgets/reader/overlay/: calculate_size.rs  mod.rs
crates/app/src/widgets/reader/render/: mod.rs
crates/app/src/widgets/reader/settings/: mod.rs
crates/app/src/widgets/reader/storage/: image.rs
src/: app.rs  fetcher.rs  fonts.rs  main.rs  util.rs  window_storage.rs
src/data/: image.rs  mod.rs  shared_data.rs
src/env/: config.rs
src/errors/: json.rs  mod.rs  scrape.rs  surreal.rs
src/middleware/: encryption.rs  mod.rs
src/pages/: home.rs  info.rs  loading_init_refres.rs  mod.rs  playground.rs  reader.rs  search.rs
src/pages/auth/: mod.rs  reset_password.rs  sign_in.rs  sign_up.rs  sign_up_info.rs  verify_account.rs
src/routes/: frontend.rs  mod.rs
src/routes/image/: mod.rs  multipart.rs  save.rs
src/routes/manga/: cover.rs  external.rs  home.rs  info.rs  mod.rs  reader.rs  search.rs
src/routes/user/: activate.rs  mod.rs  refresh.rs  reset_password.rs  sign_in.rs  sign_up.rs
src/services/: auth_service.rs  crypto_service.rs  mod.rs  uri_service.rs
src/services/db/: auth_tokens.rs  chapter.rs  chapter_version.rs  manga.rs  manga_kind.rs  manga_list.rs  mod.rs  page.rs  progress.rs  scrape_account.rs  scrape_list.rs  tag.rs  user.rs  version.rs
src/services/internal/: mod.rs
src/util/: mod.rs  parser.rs  validator.rs
src/widgets/: centered_spinner.rs  image_overlay.rs  mod.rs  or_continue_with.rs  submit_button.rs
src/widgets/reader/: mod.rs  progress.rs  scroll.rs
src/widgets/reader/load/: mod.rs  multi.rs  single.rs
src/widgets/reader/overlay/: calculate_size.rs  layout.rs
src/widgets/reader/render/: helper.rs  mod.rs
src/widgets/reader/settings/: reader.rs  view.rs
src/widgets/reader/storage/: image.rs  manga.rs  mod.rs
tools/: add_hash.rs  readme.md  rename_version.py
