[package]
name = "manread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.26.2" }
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
api_structure = { path = "../api_structure" }
ethread = { path = "../ethread" }

#fetching
serde_json = "1.0.113"
url = "2.5.0"
reqwest = { version = "0.11.24", features = ["json", "stream", "multipart"] }
poll-promise = "0.3.0"
base64 = "0.22"
keyring = "2.3.2"
egui_extras = { version = "0.26.0", features = ["all_loaders", "datepicker"] }
regex = "1.10.3"
identicon-rs = "4.0.3"
image = { version = "0.24", features = ["jpeg", "gif", "qoi"] }
chrono = "0.4.33"
futures-util = { version = "0.3.30", features = [] }
rfd = "0.14.0"
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.91"
js-sys = "0.3.68"
web-sys = { version = "0.3.68", features = ['console'] }
tokio = { version = "1.35.1", features = ["sync"] }


[features]
default = ["ccwildwords", "chinese_font", "jpn_font", "korean_font", "kalam", "komikajam", "komikaslim", "vtclettererpro", "bangersregular", "animeace", "animeace3", "comicshanns2", "dev"]
ccwildwords = []
kalam = []
komikajam = []
komikaslim = []
vtclettererpro = []
bangersregular = []
animeace = []
animeace3 = []
comicshanns2 = []
jpn_font = []
korean_font = []
chinese_font = []
dev = []

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }


# If you fork https://github.com/emilk/egui you can test with:
#egui = { path = "../egui/crates/egui" }
#egui_extras = { path = "../egui/crates/egui_extras" }

# eframe = { path = "../egui/crates/eframe" }
