[package]
name = "manread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.26.2" }
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
api_structure = { path = "../api_structure" }
ethread = { path = "../ethread" }
image = { version = "0.24", features = ["jpeg", "gif", "qoi"] }

#fetching
serde_json = "1.0"
url = "2.5"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
poll-promise = "0.3"
base64 = "0.22"
keyring = "2.3"
egui_extras = { version = "0.26", features = ["all_loaders", "datepicker"] }
rfd = "0.14"

# auth
regex = "1.10"
identicon-rs = "5.0"

#
chrono = "0.4"
futures-util = { version = "0.3", features = [] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ['console'] }
tokio = { version = "1.35", features = ["sync"] }


[features]
default = ["ccwildwords", "chinese_font", "jpn_font", "korean_font", "kalam", "komikajam", "komikaslim", "vtclettererpro", "bangersregular", "animeace", "animeace3", "comicshanns2", "dev"]
ccwildwords = []
kalam = []
komikajam = []
komikaslim = []
vtclettererpro = []
bangersregular = []
animeace = []
animeace3 = []
comicshanns2 = []
jpn_font = []
korean_font = []
chinese_font = []
dev = []

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }


# If you fork https://github.com/emilk/egui you can test with:
#egui = { path = "../egui/crates/egui" }
#egui_extras = { path = "../egui/crates/egui_extras" }

# eframe = { path = "../egui/crates/eframe" }
