[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { git = "https://github.com/ManReadApp/surrealdb", branch = "arraylike", default-features = false, features = ["kv-speedb", "scripting"] }
surrealdb-extras = { git = "https://github.com/ManReadApp/surrealdb-extras" }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
actix-web = { version = "4.5", features = ["openssl"] }
chrono = "0.4"
api_structure = { path = "../api_structure" }
manread_scraper = { path = "../scraper" }
rand = "0.8"

# main.rs
tokio = { version = "1.35", features = ["full"] }
actix-cors = { version = "0.7", optional = true }
local-ip-address = { version = "0.6", optional = true }
openssl = { version = "0.10", optional = true }
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"


#config
nanoid = "0.4"
serde_yaml = "0.9"

# api files
actix-files = "0.6"

# storage
image = "0.25"
actix-multipart = "0.6.1"
futures-util = { version = "0.3" }
img_hash = { git = "https://github.com/ManReadApp/img_hash" }
serde_json = "1.0"

# auth
jsonwebtoken = "9.2"
bcrypt = "0.15"
actix-web-grants = "4.0"
actix-web-httpauth = "0.8"

#search
async-recursion = "1.0"


[features]
default = ["detailed_error_responses", "log-ip", "cors", "cors-permissive"]

https = ["dep:openssl"]
detailed_error_responses = []
log-ip = ["dep:local-ip-address"]
cors = ["dep:actix-cors"]
cors-permissive = ["cors", "dep:actix-cors"]
encryption = []
content-type-from-filename = []
dev = []

[profile.test]
opt-level = 3